--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="color1">#ff0000</color>
+    <color name="color2">#dd0000</color>
+    <color name="color3">#bb0000</color>
+    <color name="color4">#990000</color>
+    <color name="color5">#770000</color>
+    <color name="color6">#550000</color>
+    <color name="color7">#330000</color>
 </resources>
